<resources>
    <string name="app_name">Данные персонажа БУНКЕР</string>
    <string name="app_info">Информация и правила</string>
    <string name="hint_data_str">Код персонажа</string>
    <string name="lvl_hard">Уровень положительности</string>
    <string name="icd">_</string>
    <string name="hide">Закрыть подсказку</string>
    <string name="start">Начать</string>
    <string name="so_short">Слишком короткий ID</string>
    <string name="show_icons">Показывать значки </string>
    <string name="show_colors">Окрашивать пропертайлы</string>
    <string name="generate_balance">Умная генерация ключа</string>
    <string name="icon_no_text">Значки без текста</string>
    <string name="data_url">https://raw.githubusercontent.com/AZsSPC/VaultChar/master/data.vault</string>
    <string name="info">Итак, давайте узнаем правила этой игры, свойств, персонажей и прочего.\n\nЕсть N-ное количество выживших, 80% из которых должны отправится в бункер, прожить там 1 год, выйти из него и продолжить жизнь на обновленной Земле. Или не совсем?..\nКого оставить в бункере выбирают сами игроки. Времени на представиться и решить все - 10 минут.\nИгра имеет практически полную свободу действий персонажа: исключения составляют свойства персонажей и бункера, а значит вы можете делать что-угодно, если бы это происходило в реальности, включите воображение!\n\nУ каждого игрока есть:\n • Основа персонажа - сам игровой персонаж с базовыми свойствами\n • Цель игры - то, что вы должны сделать, что бы победить\n • Набор свойств и инвентарь - то чем владеет персонаж\n\nКаждое свойство обладает характеристиками: тип видимости, уровень положительности, значение свойства\n • Тип видимости: если свойство СКРЫТОЕ - вы не можете сообщить о нем, если ОЧЕВИДНОЕ - вы обязаны сообщить о нем всем, если же у свойства нет типа видимости - оно ОБЫЧНОЕ, вы сами решаете, говорить о нем, или нет.\n • Уровень положительности: Для визуально-быстрого восприятия\n • Значение: описывает то, что вы можете (или наоборот - не можете) имея это свойство\n   Да, кстати, советую пользоваться [Умным генератором ключей] - будут исключаться не сбалансированные и не логичные персонажи.\n\nИгра разделена на 12 ходов: 1 месяц = 1 ход.\nКаждый ход все игроки, исходя из правил общения, сообщают что они будут делать, переговариваются и прочее. Каждый ход длиться максимум 15 минут. Для скрытых действий отводится еще 5 минут, ведущий подходит к каждому игроку и слушает его, даже если игрок молчит. На вне-игровое общение правила свойств не действует.\n\nГлавное - соблюдайте все особенности вашего игрового аватара, и не делайте того, чего он не может (ведущий следит =_=)</string>
</resources>
