<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLay"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/char_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/hint_data_str"
        android:inputType="number"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/fab_refresh"
        app:layout_constraintEnd_toEndOf="@+id/fab_apply"
        app:layout_constraintStart_toStartOf="@+id/fab_refresh"
        app:layout_constraintTop_toTopOf="@+id/fab_refresh" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="generateRandom"
        app:backgroundTint="@color/minus"
        app:fabSize="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/refresh" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="convert"
        app:backgroundTint="@color/normal"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/apply" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_refresh">

        <Switch
            android:id="@+id/cb_smartgen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="#FFFFFF"
            android:onClick="checkBox"
            android:text="@string/generate_balance"
            android:textColor="@color/basic"
            android:textSize="16sp"
            android:thumb="@drawable/switch_ic" />

        <Switch
            android:id="@+id/cb_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="#FFFFFF"
            android:onClick="checkBox"
            android:text="@string/show_icons"
            android:textColor="@color/basic"
            android:textSize="16sp"
            android:thumb="@drawable/switch_ic" />

        <Switch
            android:id="@+id/cb_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="#FFFFFF"
            android:onClick="checkBox"
            android:text="@string/show_colors"
            android:textColor="@color/basic"
            android:textSize="16sp"
            android:thumb="@drawable/switch_ic" />

        <Switch
            android:id="@+id/cb_icnot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="#FFFFFF"
            android:onClick="checkBox"
            android:text="@string/icon_no_text"
            android:textColor="@color/basic"
            android:textSize="16sp"
            android:thumb="@drawable/switch_ic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lvl_hard"
                android:textColor="@color/basic"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/sk_lvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="2"
                android:thumb="@drawable/switch_ic"
                android:thumbTint="@color/colorAccent" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_apply2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showInfoA"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="32dp"
            app:srcCompat="@drawable/info" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>